# ascl-gcs

./: .gitignore
backend/gcs-video/: pyproject.toml
backend/gcs-video/gcs_video/: main.py  server.py  streamer.py  web.html
backend/socket-comm/: pyproject.toml
backend/socket-comm/socket_comm/: globals.py  loggerASCL.py  main.py  messageSet.py  serialCom.py  socketio_server.py  test.py  video_router.py
backend/socket-comm/socket_comm/logs/: Flight_Log_Sortie_1.csv  Flight_Log_Sortie_4.csv  Flight_Log_Sortie_5.csv  Flight_Log_Sortie_7.csv
backend/tile-server/: pyproject.toml
backend/tile-server/tile_server/: calculator.py  main.py  tileManager.py
frontend/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.next/: BUILD_ID  build-manifest.json  images-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/server/: _error.js  middleware-build-manifest.js  middleware-react-loadable-manifest.js  pages-manifest.json  webpack-api-runtime.js
frontend/.next/server/chunks/: 152.js  236.js  352.js  4.js  442.js  675.js
frontend/.next/server/pages/: 404.html  500.html  _app.js  _app.js.nft.json  _document.js  _document.js.nft.json  _error.js  _error.js.nft.json  index.html  index.js  index.js.nft.json  map.html  map.js.nft.json  map2.html  map2.js.nft.json  mission.html  mission.js  mission.js.nft.json
frontend/.next/static/3vwFeSw5eVbaf4hlGhcYR/: _buildManifest.js
(+103 files in other folders)
